moved readings to its own collection

--- a/_config.yml
+++ b/_config.yml
@@ -102,3 +102,9 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: false
+
+#collections
+collections:
+  readings:
+    output: true
+    permalink: /readings/:path/
